--- a/training.css
+++ b/training.css
@@ -7,6 +7,7 @@ a {
   color: #6699CC;
   margin: 1%;
   float: right;
+  text-align: bottom;
 }
 a:hover {
   color: #33CCCC;
@@ -17,6 +18,7 @@ h1 {
   text-align: left;
   display: inline;
   font-size: 60px;
+
 }
 .pawprint {
   float: left;
