--- a/style2resp.css
+++ b/style2resp.css
@@ -1,78 +1,56 @@
 @media screen and (max-width: 320px) {
-    a {
-        text-align: center;
-        font-size: 20px;
-        padding:0%;
-        padding-right: 8%;
-        padding-bottom: 10%;
-    }
-
-    h1 {
-        text-align: center;
-        display: block;
-        font-size: 60px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-
-    img  {
-        width: 320px;
-        height: 335px;
-    }
-    h2 {
-        font-family: 'Homemade Apple', cursive;
-        font-size: 45;
-        color:#33CCCC;
-        text-align:center;
-    }
-
-    h3 {
-        font-family: 'Lora', serif;
-        color: #6699CC;
-        font-size: 15px;
-
-    }
-    .img-item a {
-        font-size: 15px;
-    }
-
-
-    #four_columns {
-        font-family: 'Lora', serif;
-        line-height:25px;
-        width:auto;
-        max-width:960px;
-        padding:10px 0 10px 0;
-        color: #6699CC;
-    }
-
-    #four_columns h2 {
-        font-family: 'Lora', serif;
+  #wrapper {
+    max-width: 960px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 30px; }
+    #wrapper h1 {
+      text-align: center;
+      display: block;
+      font-size: 60px;
+      margin-top: 10px;
+      margin-bottom: 10px; }
+    #wrapper a {
+      text-align: center;
+      font-size: 20px;
+      padding: 0%;
+      padding-right: 8%;
+      padding-bottom: 10%; }
+    #wrapper .blue {
+      width: 320px;
+      height: 335px; }
+    #wrapper .teal {
+      display: none; }
+    #wrapper .picture {
+      display: none; }
+    #wrapper h2 {
+      font-size: 45;
+      text-align: center; }
+    #wrapper #four_columns {
+      line-height: 25px;
+      width: auto;
+      max-width: 960px;
+      padding: 10px 0 10px 0; }
+      #wrapper #four_columns h2 {
         font-size: 15px;
         margin-bottom: 10px;
         margin-top: 15px;
         padding-top: 0px;
-        color: #6699CC;
-    }
-
-    #four_columns .img-item {
-        float:left;
-        width: 100%;
-        text-align:left;
-        margin-bottom: 10%;
-
-    }
-
-    .teal {
-        display: none;
-    }
-    .picture {
-        display: none;
-    }
-
-    footer {
-        margin: 1%;
-        width: 960px;
-        height:230px;
-        float: center;
-        border-bottom: none;
+        color: #6699CC; }
+        #wrapper #four_columns h2 .img-item {
+          float: left;
+          width: 100%;
+          text-align: left;
+          margin-bottom: 10%; }
+          #wrapper #four_columns h2 .img-item p {
+            font-size: 12px; }
+            #wrapper #four_columns h2 .img-item p a {
+              font-size: 10px; }
+    #wrapper h3 {
+      font-size: 15px; }
+    #wrapper footer {
+      margin: 1%;
+      width: 960px;
+      height: 230px;
+      float: center;
+      border-bottom: none; } }
