--- a/trainingresp.css
+++ b/trainingresp.css
@@ -1,42 +1,31 @@
 @media screen and (max-width: 320px) {
-
-    a {
-        text-align: center;
-        font-size: 20px;
-        padding:0%;
-        padding-right: 8%;
-      }
-
-    h1 {
-        text-align: center;
-        display: block;
-        font-size: 60px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    .pawprint {
-        display:none;
-    }
-    h2 {
-        text-align: center;
-
-    }
-    blockquote {
-        text-align: center;
-        font-style: italic;
-        line-height: 45px;
-    }
-
-    footer {
-        margin: 1%;
-        width: 960px;
-        height: 500px;
-        float: center;
-        border-bottom: solid #6699CC 2px;
-    }
-    #wrapper {
-        max-width: 960px;
-        margin-right: auto;
-        margin-left: auto;
-        padding-bottom: 30px;
-    }
+  #wrapper {
+    max-width: 960px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 30px; }
+    #wrapper h1 {
+      text-align: center;
+      display: block;
+      font-size: 60px;
+      margin-top: 10px;
+      margin-bottom: 10px; }
+    #wrapper .pawprint {
+      display: none; }
+    #wrapper a {
+      text-align: center;
+      font-size: 20px;
+      padding: 0%;
+      padding-right: 8%; }
+    #wrapper h2 {
+      text-align: center; }
+    #wrapper blockquote {
+      text-align: center;
+      font-style: italic;
+      line-height: 45px; }
+    #wrapper footer {
+      margin: 1%;
+      width: 960px;
+      height: 500px;
+      float: center;
+      border-bottom: solid #6699CC 2px; } }
